--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,42 @@
 name: Build APK
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-    - name: Install dependencies
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+
+    - name: Install system dependencies
       run: |
         sudo apt update
-        sudo apt install -y python3-pip openjdk-17-jdk zip unzip
+        sudo apt install -y \
+          openjdk-17-jdk \
+          zip unzip \
+          libncurses5 \
+          libstdc++6
+
+    - name: Install Buildozer
+      run: |
         pip install --upgrade pip
-        pip install buildozer cython
+        pip install cython buildozer
 
     - name: Build APK
       run: |
         buildozer android debug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: apk
+        name: APK
         path: bin/*.apk
