--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,24 +9,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Setup Python
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
         python-version: "3.10"
 
-    - name: Install system dependencies
+    - name: Install system deps
       run: |
         sudo apt update
-        sudo apt install -y \
-          openjdk-17-jdk \
-          zip unzip \
-          libncurses5 \
-          libstdc++6
+        sudo apt install -y openjdk-17-jdk zip unzip
 
-    - name: Install Buildozer
+    - name: Install buildozer
       run: |
         pip install --upgrade pip
         pip install cython buildozer
