--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,21 +9,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
+    - name: Setup Python
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
 
-    - name: Install system deps
+    - name: Install system dependencies
       run: |
         sudo apt update
-        sudo apt install -y openjdk-17-jdk zip unzip
+        sudo apt install -y \
+          openjdk-17-jdk \
+          zip unzip \
+          wget \
+          libstdc++6
 
-    - name: Install buildozer
+    - name: Install Buildozer
       run: |
         pip install --upgrade pip
         pip install cython buildozer
+
+    - name: Accept Android SDK Licenses
+      run: |
+        mkdir -p ~/.android
+        touch ~/.android/repositories.cfg
+        yes | buildozer android update
 
     - name: Build APK
       run: |
